welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:26: error: '<-' expected but integer literal found.
  for(i 1 <- 4) { faireV() }
        ^PictureMono1:27: error: illegal start of simple expression
} 
^